--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@
             height:auto;
             background: black;
             background-image: url("../Bilder/Hände.jpg");
-            background-size:100%;
+            background-size: cover;
             background-position: center;
             background-repeat:no-repeat;
             color: rgb(0, 0, 139);
