--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,11 +15,13 @@ html, body {
 /* Header */
 header {
     padding: 0px;
-    margin: 0;
+    margin: 0px;
     background: black url("../Bilder/Hände.jpg") no-repeat center/cover;
     background-size: cover;
-    background-position: left;  /* Das Bild beginnt am linken Rand */
-    background-repeat: no-repeat;
+    /*background-position: left;  !* Das Bild beginnt am linken Rand *!*/
+    /*!*background-repeat: no-repeat;*!*/
+    border-bottom-left-radius:50px;
+    border-bottom-right-radius:50px;
     color: rgb(0, 0, 139);
     text-align: center;
     justify-content: center;
@@ -188,6 +190,7 @@ ul {
 }
 
 nav {
+
   width: 100%;
   display: flex;
   justify-content: center;
