--- a/styles/styles.css
+++ b/styles/styles.css
@@ -299,7 +299,7 @@ nav {
      display: flex;
      justify-content: space-between;
      align-items: center;
-     background-color: black;
+     background-color: white;
      padding: 10px 20px;
  }
 
@@ -323,7 +323,7 @@ nav {
  .menu-icon {
      display: none;
      font-size: 30px;
-     color: white;
+     color: black;
      cursor: pointer;
  }
 
