--- a/styles/styles.css
+++ b/styles/styles.css
@@ -314,7 +314,7 @@ nav {
  }
 
  .nav-links a {
-     color: white;
+     color: black;
      text-decoration: none;
      font-size: 18px;
  }
@@ -336,7 +336,7 @@ nav {
      .nav-links {
          display: none;
          flex-direction: column;
-         background-color: black;
+         background-color: white;
          width: 100%;
          position: absolute;
          top: 50px;
