--- a/styles/styles.css
+++ b/styles/styles.css
@@ -294,6 +294,11 @@ nav {
  color: black;
 }
 
+.Fuhlendorf1, .Produkte{
+ font-size: 25px;
+ color: black;
+}
+
 /* Navigation */
  nav {
      display: flex;
@@ -301,16 +306,24 @@ nav {
      align-items: center;
      background-color: white;
      padding: 10px 20px;
+     position: relative;
  }
 
  .nav-links {
      list-style: none;
-     display: flex;
-     gap: 20px;
+     display: none;
+     flex-direction: column;
+     background-color: white;
+     width: 100%;
+     position: absolute;
+     top: 50px;
+     left: 0;
+     padding: 10px;
+     text-align: center;
  }
 
  .nav-links li {
-     display: inline;
+     padding: 10px 0;
  }
 
  .nav-links a {
@@ -321,7 +334,7 @@ nav {
 
  /* Hamburger-Icon */
  .menu-icon {
-     display: none;
+     display: block;
      font-size: 30px;
      color: black;
      cursor: pointer;
@@ -329,11 +342,17 @@ nav {
 
  /* Responsive Menü */
  @media (max-width: 768px) {
-     .menu-icon {
-         display: block;
+     .nav-links {
+         display: none;
      }
+     .nav-links.show {
+             display: flex;
+         }
+     }
+     
 
      .nav-links {
+         list-style: none;
          display: none;
          flex-direction: column;
          background-color: white;
@@ -342,6 +361,7 @@ nav {
          top: 50px;
          left: 0;
          padding: 10px;
+         text-align: center;
      }
 
      .nav-links.show {
